css/app.css
 
 * {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
 }
 body {
  background: #333;
  font-size: 1.6em;
  color: #eee;
  font-weight: 600;
 }
 header {
  width: 150%;
  height: 700px;
  background: url('../assets/images/site_bkg_new.jpg');
  padding: 50px 100px;
 }
  #logo {
    width: 160px;
  }
 nav {
  width: 100%;
  height: 80px;
  background: #eee;
  text-align: center;
  padding-top: 20px;
  border-top: 1px solid #222;
  border-bottom: 1px solid #222;
 }
  a {
    text-decoration: none;
    font-size: 1.5em;
    font-weight: 700;
    color: #333;
    margin: 0 21px;
  }
  a:hover {
    color: #a47764;
    text-decoration: underline;
  }
 main {
  width: 100%;
  background: #fff;
 }
  #about {
    width: 100%;
    min-height: 700px;
    background: linear-gradient(to right, #0a2a88, #59cde9);
    border-bottom: 1px solid #333;
    padding: 50px 100px;
  }
    #bioPic {
      float: left; 
      max-width: 420px;
      border-radius: 16px;
      border: 4px solid #fff;
      margin: 50px 500px;
    }
  #skills {
    width: 100%;
    background: #eee;
    border-bottom: 1px solid #a47764;
    padding: 100px 100px;
    text-align: center;
  }
    .skill {
      width: 300px;
      height: 300px;
      background: #777;
      color: #0a2a88;
      border: 1px solid #a47764;
      border-radius: 8px;
      display: inline-block;
      margin: 25px;
      text-align: center;
    }
    .topSkill {
      background: #333;
      padding: 25px 0;
      border-top-left-radius: 8px;
      border-top-right-radius: 8px;
    }
    .bottomSkill {
      padding: 50px 25px;
    }
      .bottomSkill > i {
        font-size: 4em;
      }
  #contact {
    width: 100%;
    height: 700px;
    background: linear-gradient(to right, #0a2a88, #59cde9);
    border-bottom: 1px solid #a47764;
    padding: 100px 100px;
  }
    #contactForm {
      padding: 20px;
      max-width: 60%;
      margin: 50px auto;
      border-radius: 8px;
      background: linear-gradient(to right, #d6a4a4, #dae2f8);
    }
    input, textarea {
      width: 100%;
      padding: 10px;
      margin-top: 10px;
      margin-bottom: 15px;
      border: 1px solid #ccc;
      border-radius: 4px;
    }
    button {
      background: #0a2a88
      color: #fff;
      padding: 10px;
      border: none;
      width: 100%;
      border-radius: 4px;
      cursor: pointer;
    }
 footer {
  width: 100%;
  height: 200px;
  background: linear-gradient(to right, #d6a4a4, #dae2f8);
  margin-bottom: 100px;
  color: #333;
  text-align: center;
  padding-top: 20px;
  font-size: .9em;
  font-style: italic;
 }

